Bugfixes quoted printable and utf-8

--- a/modules/MailServerPortlet/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/MailServerPortlet/src/main/resources/META-INF/resources/css/main.scss
@@ -1,4 +1,9 @@
 .mail-server-portlet{
   background-color: white;
   padding: 15px;
+  table.headers {
+    tr {
+      font-size: small;
+    }
+  }
 }
